--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,16 +1,7 @@
 ﻿l_english:
- AEF_fra_social_democracy_ADJ:0 "Central African"
- AEF_fra_social_democracy_DEF:0 "The French Equatorial Africa"
- AEF_fra_social_democracy:0 "French Equatorial Africa"
- AFN_fra_social_democracy_ADJ:0 "North African"
- AFN_fra_social_democracy_DEF:0 "The French North Africa"
- AFN_fra_social_democracy:0 "French North Africa"
  ANG_por_authoritarianism_ADJ:0 "Angolan"
  ANG_por_authoritarianism_DEF:0 "The Province of Angola"
  ANG_por_authoritarianism:0 "Province of Angola"
- AOF_fra_social_democracy_ADJ:0 "West African"
- AOF_fra_social_democracy_DEF:0 "The French West Africa"
- AOF_fra_social_democracy:0 "French West Africa"
  BLA_com_communism_ADJ:0 "Don-Kuban"
  BLA_com_communism_DEF:0 "The Black Sea ASSR"
  BLA_com_communism:0 "Black Sea ASSR"
@@ -20,18 +11,18 @@
  BOL_san_liberalism_ADJ:0 "Bolivian"
  BOL_san_liberalism_DEF:0 "The Santa Cruz"
  BOL_san_liberalism:0 "Santa Cruz"
- BWA_bri_conservatism_ADJ:0 "West African"
- BWA_bri_conservatism_DEF:0 "The British West Africa"
- BWA_bri_conservatism:0 "British West Africa"
+ BWA_bri_socialism_ADJ:0 "West African"
+ BWA_bri_socialism_DEF:0 "The West African Union"
+ BWA_bri_socialism:0 "West African Union"
  CAN_bri_conservatism_ADJ:0 "Canadian"
- CAN_bri_conservatism_DEF:0 "The Dominion of Canada"
- CAN_bri_conservatism:0 "Dominion of Canada"
+ CAN_bri_conservatism_DEF:0 "The Canadian Confederation"
+ CAN_bri_conservatism:0 "Canadian Confederation"
  CAN_bri_liberalism_ADJ:0 "Canadian"
- CAN_bri_liberalism_DEF:0 "The Dominion of Canada"
- CAN_bri_liberalism:0 "Dominion of Canada"
+ CAN_bri_liberalism_DEF:0 "The Canadian Confederation"
+ CAN_bri_liberalism:0 "Canadian Confederation"
  CAN_bri_social_democracy_ADJ:0 "Canadian"
- CAN_bri_social_democracy_DEF:0 "The Dominion of Canada"
- CAN_bri_social_democracy:0 "Dominion of Canada"
+ CAN_bri_social_democracy_DEF:0 "The Canadian Confederation"
+ CAN_bri_social_democracy:0 "Canadian Confederation"
  COG_bel_conservatism_ADJ:0 "Congolese"
  COG_bel_conservatism_DEF:0 "The Belgian Congo"
  COG_bel_conservatism:0 "Belgian Congo"
@@ -50,12 +41,6 @@
  ETH_ita_fascism_ADJ:0 "Italian"
  ETH_ita_fascism_DEF:0 "The Italian Empire"
  ETH_ita_fascism:0 "Italian Empire"
- FRA_com_communism_ADJ:0 "French"
- FRA_com_communism_DEF:0 "The Communard France"
- FRA_com_communism:0 "Communard France"
- FRA_soc_socialism_ADJ:0 "French"
- FRA_soc_socialism_DEF:0 "The Cartel France"
- FRA_soc_socialism:0 "Cartel France"
  FIN_soc_socialism_ADJ:0 "Finnish"
  FIN_soc_socialism_DEF:0 "The Red Finland"
  FIN_soc_socialism:0 "Red Finland"
@@ -98,9 +83,9 @@
  PRU_bol_social_democracy_ADJ:0 "Peruvian-Bolivian"
  PRU_bol_social_democracy_DEF:0 "The Peru-Bolivian Confederation"
  PRU_bol_social_democracy:0 "Peru-Bolivian Confederation"
- RAJ_bri_conservatism_ADJ:0 "Indian"
- RAJ_bri_conservatism_DEF:0 "The British Raj"
- RAJ_bri_conservatism:0 "British Raj"
+ RAJ_bri_conservatism_ADJ:0 "British"
+ RAJ_bri_conservatism_DEF:0 "The British Empire"
+ RAJ_bri_conservatism:0 "British Empire"
  SOV_com_communism_ADJ:0 "Russian"
  SOV_com_communism_DEF:0 "The Russian SFSR"
  SOV_com_communism:0 "Russian SFSR"
