--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -47,15 +47,15 @@
  AFG_socialism_ADJ:0 "Afghan"
  AFG_socialism_DEF:0 "The Afghanistan"
  AFG_socialism:0 "Afghanistan"
- AFN_authoritarianism_ADJ:0 "Algerian"
- AFN_authoritarianism_DEF:0 "The Algeria"
- AFN_authoritarianism:0 "Algeria"
- AFN_communism_ADJ:0 "Algerian"
- AFN_communism_DEF:0 "The Algeria"
- AFN_communism:0 "Algeria"
- AFN_conservatism_ADJ:0 "Algerian"
- AFN_conservatism_DEF:0 "The Algeria"
- AFN_conservatism:0 "Algeria"
+ AFN_authoritarianism_ADJ:0 "French"
+ AFN_authoritarianism_DEF:0 "The French State"
+ AFN_authoritarianism:0 "French State"
+ AFN_communism_ADJ:0 "French"
+ AFN_communism_DEF:0 "The French State"
+ AFN_communism:0 "French State"
+ AFN_conservatism_ADJ:0 "French"
+ AFN_conservatism_DEF:0 "The French State"
+ AFN_conservatism:0 "French State"
  AFN_fascism_ADJ:0 "French"
  AFN_fascism_DEF:0 "The French State"
  AFN_fascism:0 "French State"
@@ -167,30 +167,30 @@
  ARG_socialism_ADJ:0 "Argentinian"
  ARG_socialism_DEF:0 "The Argentina"
  ARG_socialism:0 "Argentina"
- AST_authoritarianism_ADJ:0 "Australian"
- AST_authoritarianism_DEF:0 "The Australia"
- AST_authoritarianism:0 "Australia"
- AST_communism_ADJ:0 "Australian"
- AST_communism_DEF:0 "The Australia"
- AST_communism:0 "Australia"
- AST_conservatism_ADJ:0 "Australian"
- AST_conservatism_DEF:0 "The Australia"
- AST_conservatism:0 "Australia"
- AST_fascism_ADJ:0 "Australian"
- AST_fascism_DEF:0 "The Australia"
- AST_fascism:0 "Australia"
- AST_liberalism_ADJ:0 "Australian"
- AST_liberalism_DEF:0 "The Australia"
- AST_liberalism:0 "Australia"
- AST_nazism_ADJ:0 "Australian"
- AST_nazism_DEF:0 "The Australia"
- AST_nazism:0 "Australia"
- AST_social_democracy_ADJ:0 "Australian"
- AST_social_democracy_DEF:0 "The Australia"
- AST_social_democracy:0 "Australia"
- AST_socialism_ADJ:0 "Australian"
- AST_socialism_DEF:0 "The Australia"
- AST_socialism:0 "Australia"
+ AST_authoritarianism_ADJ:0 "Australasian"
+ AST_authoritarianism_DEF:0 "The Commonwealth of Australasia"
+ AST_authoritarianism:0 "Commonwealth of Australasia"
+ AST_communism_ADJ:0 "Australasian"
+ AST_communism_DEF:0 "The Commonwealth of Australasia"
+ AST_communism:0 "Commonwealth of Australasia"
+ AST_conservatism_ADJ:0 "Australasian"
+ AST_conservatism_DEF:0 "The Commonwealth of Australasia"
+ AST_conservatism:0 "Commonwealth of Australasia"
+ AST_fascism_ADJ:0 "Australasian"
+ AST_fascism_DEF:0 "The Commonwealth of Australasia"
+ AST_fascism:0 "Commonwealth of Australasia"
+ AST_liberalism_ADJ:0 "Australasian"
+ AST_liberalism_DEF:0 "The Commonwealth of Australasia"
+ AST_liberalism:0 "Commonwealth of Australasia"
+ AST_nazism_ADJ:0 "Australasian"
+ AST_nazism_DEF:0 "The Commonwealth of Australasia"
+ AST_nazism:0 "Commonwealth of Australasia"
+ AST_social_democracy_ADJ:0 "Australasian"
+ AST_social_democracy_DEF:0 "The Commonwealth of Australasia"
+ AST_social_democracy:0 "Commonwealth of Australasia"
+ AST_socialism_ADJ:0 "Australasian"
+ AST_socialism_DEF:0 "The Commonwealth of Australasia"
+ AST_socialism:0 "Commonwealth of Australasia"
  AUS_authoritarianism_ADJ:0 "Austrian"
  AUS_authoritarianism_DEF:0 "The Austria"
  AUS_authoritarianism:0 "Austria"
@@ -600,29 +600,29 @@
  EGY_socialism_DEF:0 "The Egypt"
  EGY_socialism:0 "Egypt"
  ENG_authoritarianism_ADJ:0 "British"
- ENG_authoritarianism_DEF:0 "The United Kingdom"
- ENG_authoritarianism:0 "United Kingdom"
+ ENG_authoritarianism_DEF:0 "The Commonwealth of Britain"
+ ENG_authoritarianism:0 "Commonwealth of Britain"
  ENG_communism_ADJ:0 "British"
- ENG_communism_DEF:0 "The United Kingdom"
- ENG_communism:0 "United Kingdom"
+ ENG_communism_DEF:0 "The Commonwealth of Britain"
+ ENG_communism:0 "Commonwealth of Britain"
  ENG_conservatism_ADJ:0 "British"
- ENG_conservatism_DEF:0 "The United Kingdom"
- ENG_conservatism:0 "United Kingdom"
+ ENG_conservatism_DEF:0 "The Commonwealth of Britain"
+ ENG_conservatism:0 "Commonwealth of Britain"
  ENG_fascism_ADJ:0 "British"
- ENG_fascism_DEF:0 "The United Kingdom"
- ENG_fascism:0 "United Kingdom"
+ ENG_fascism_DEF:0 "The Commonwealth of Britain"
+ ENG_fascism:0 "Commonwealth of Britain"
  ENG_liberalism_ADJ:0 "British"
- ENG_liberalism_DEF:0 "The United Kingdom"
- ENG_liberalism:0 "United Kingdom"
+ ENG_liberalism_DEF:0 "The Commonwealth of Britain"
+ ENG_liberalism:0 "Commonwealth of Britain"
  ENG_nazism_ADJ:0 "British"
- ENG_nazism_DEF:0 "The United Kingdom"
- ENG_nazism:0 "United Kingdom"
+ ENG_nazism_DEF:0 "The Commonwealth of Britain"
+ ENG_nazism:0 "Commonwealth of Britain"
  ENG_social_democracy_ADJ:0 "British"
- ENG_social_democracy_DEF:0 "The United Kingdom"
- ENG_social_democracy:0 "United Kingdom"
+ ENG_social_democracy_DEF:0 "The Commonwealth of Britain"
+ ENG_social_democracy:0 "Commonwealth of Britain"
  ENG_socialism_ADJ:0 "British"
- ENG_socialism_DEF:0 "The United Kingdom"
- ENG_socialism:0 "United Kingdom"
+ ENG_socialism_DEF:0 "The Commonwealth of Britain"
+ ENG_socialism:0 "Commonwealth of Britain"
  EST_authoritarianism_ADJ:0 "Estonian"
  EST_authoritarianism_DEF:0 "The Estonia"
  EST_authoritarianism:0 "Estonia"
@@ -696,29 +696,29 @@
  FIN_socialism_DEF:0 "The Finland"
  FIN_socialism:0 "Finland"
  FRA_authoritarianism_ADJ:0 "French"
- FRA_authoritarianism_DEF:0 "The France"
- FRA_authoritarianism:0 "France"
+ FRA_authoritarianism_DEF:0 "The French Union"
+ FRA_authoritarianism:0 "French Union"
  FRA_communism_ADJ:0 "French"
- FRA_communism_DEF:0 "The Communard France"
- FRA_communism:0 "Communard France"
+ FRA_communism_DEF:0 "The French Union"
+ FRA_communism:0 "French Union"
  FRA_conservatism_ADJ:0 "French"
- FRA_conservatism_DEF:0 "The France"
- FRA_conservatism:0 "France"
+ FRA_conservatism_DEF:0 "The French Union"
+ FRA_conservatism:0 "French Union"
  FRA_fascism_ADJ:0 "French"
- FRA_fascism_DEF:0 "The France"
- FRA_fascism:0 "France"
+ FRA_fascism_DEF:0 "The French Union"
+ FRA_fascism:0 "French Union"
  FRA_liberalism_ADJ:0 "French"
- FRA_liberalism_DEF:0 "The France"
- FRA_liberalism:0 "France"
+ FRA_liberalism_DEF:0 "The French Union"
+ FRA_liberalism:0 "French Union"
  FRA_nazism_ADJ:0 "French"
- FRA_nazism_DEF:0 "The France"
- FRA_nazism:0 "France"
+ FRA_nazism_DEF:0 "The French Union"
+ FRA_nazism:0 "French Union"
  FRA_social_democracy_ADJ:0 "French"
- FRA_social_democracy_DEF:0 "The France"
- FRA_social_democracy:0 "France"
+ FRA_social_democracy_DEF:0 "The French Union"
+ FRA_social_democracy:0 "French Union"
  FRA_socialism_ADJ:0 "French"
- FRA_socialism_DEF:0 "The Cartel France"
- FRA_socialism:0 "Cartel France"
+ FRA_socialism_DEF:0 "The French Union"
+ FRA_socialism:0 "French Union"
  GEO_authoritarianism_ADJ:0 "Georgian"
  GEO_authoritarianism_DEF:0 "The Georgia"
  GEO_authoritarianism:0 "Georgia"
