--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -740,7 +740,7 @@
  STATE_739:0 "Haida Gwaii"
  STATE_740:0 "Vancouver Island"
  STATE_741:0 "Cambodia"
- STATE_742:0 "Stalinabad"
+ STATE_742:0 "Dyushambe"
  STATE_743:0 "Qingdao"
  STATE_744:0 "Xian"
  STATE_745:0 "Dalian"
