--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -290,7 +290,7 @@
  VICTORY_POINTS_4572:0 "Hsinking"
  VICTORY_POINTS_4052:0 "Pyongyang"
  VICTORY_POINTS_4056:0 "Pusan"
- VICTORY_POINTS_7125:0 "Gyeongseong"
+ VICTORY_POINTS_7125:0 "Keijō"
  VICTORY_POINTS_7186:0 "Taipei"
  VICTORY_POINTS_10433:0 "Harbin"
  VICTORY_POINTS_11771:0 "Mukden"
