--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1515,8 +1515,8 @@
  PRC_authoritarianism_DEF:0 "The Jiangxi Soviet"
  PRC_authoritarianism:0 "Jiangxi Soviet"
  PRC_communism_ADJ:0 "Chinese"
- PRC_communism_DEF:0 "The Jiangxi Soviet Soviet"
- PRC_communism:0 "Jiangxi Soviet Soviet"
+ PRC_communism_DEF:0 "The Jiangxi Soviet"
+ PRC_communism:0 "Jiangxi Soviet"
  PRC_conservatism_ADJ:0 "Chinese"
  PRC_conservatism_DEF:0 "The Jiangxi Soviet"
  PRC_conservatism:0 "Jiangxi Soviet"
