--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -936,8 +936,8 @@
  INS_socialism_DEF:0 "The Nasakom Indonesia"
  INS_socialism:0 "Nasakom Indonesia"
  IRE_authoritarianism_ADJ:0 "Irish"
- IRE_authoritarianism_DEF:0 "The Irish Free State"
- IRE_authoritarianism:0 "Irish Free State"
+ IRE_authoritarianism_DEF:0 "The Ireland"
+ IRE_authoritarianism:0 "Ireland"
  IRE_communism_ADJ:0 "Irish"
  IRE_communism_DEF:0 "The People's Republic of Ireland"
  IRE_communism:0 "People's Republic of Ireland"
@@ -945,44 +945,44 @@
  IRE_conservatism_DEF:0 "The Ireland"
  IRE_conservatism:0 "Ireland"
  IRE_fascism_ADJ:0 "Irish"
- IRE_fascism_DEF:0 "The Irish Free State"
- IRE_fascism:0 "Irish Free State"
+ IRE_fascism_DEF:0 "The Ireland"
+ IRE_fascism:0 "Ireland"
  IRE_liberalism_ADJ:0 "Irish"
  IRE_liberalism_DEF:0 "The Ireland"
  IRE_liberalism:0 "Ireland"
  IRE_nazism_ADJ:0 "Irish"
- IRE_nazism_DEF:0 "The Irish Free State"
- IRE_nazism:0 "Irish Free State"
+ IRE_nazism_DEF:0 "The Ireland"
+ IRE_nazism:0 "Ireland"
  IRE_social_democracy_ADJ:0 "Irish"
  IRE_social_democracy_DEF:0 "The Ireland"
  IRE_social_democracy:0 "Ireland"
  IRE_socialism_ADJ:0 "Irish"
  IRE_socialism_DEF:0 "The People's Republic of Ireland"
  IRE_socialism:0 "People's Republic of Ireland"
- ISR_authoritarianism_ADJ:0 "Judean"
- ISR_authoritarianism_DEF:0 "The New Judea"
- ISR_authoritarianism:0 "New Judea"
- ISR_communism_ADJ:0 "Judean"
- ISR_communism_DEF:0 "The Commune of New Judea"
- ISR_communism:0 "Commune of New Judea"
- ISR_conservatism_ADJ:0 "Judean"
- ISR_conservatism_DEF:0 "The New Judea"
- ISR_conservatism:0 "New Judea"
- ISR_fascism_ADJ:0 "Judean"
- ISR_fascism_DEF:0 "The New Judea"
- ISR_fascism:0 "New Judea"
- ISR_liberalism_ADJ:0 "Judean"
- ISR_liberalism_DEF:0 "The New Judea"
- ISR_liberalism:0 "New Judea"
- ISR_nazism_ADJ:0 "Judean"
- ISR_nazism_DEF:0 "The New Judea"
- ISR_nazism:0 "New Judea"
- ISR_social_democracy_ADJ:0 "Judean"
- ISR_social_democracy_DEF:0 "The New Judea"
- ISR_social_democracy:0 "New Judea"
- ISR_socialism_ADJ:0 "Judean"
- ISR_socialism_DEF:0 "The Commune of New Judea"
- ISR_socialism:0 "Commune of New Judea"
+ ISR_authoritarianism_ADJ:0 "Ugandan"
+ ISR_authoritarianism_DEF:0 "The Uganda"
+ ISR_authoritarianism:0 "Uganda"
+ ISR_communism_ADJ:0 "Ugandan"
+ ISR_communism_DEF:0 "The People's Republic of Uganda"
+ ISR_communism:0 "People's Republic of Uganda"
+ ISR_conservatism_ADJ:0 "Ugandan"
+ ISR_conservatism_DEF:0 "The Uganda"
+ ISR_conservatism:0 "Uganda"
+ ISR_fascism_ADJ:0 "Ugandan"
+ ISR_fascism_DEF:0 "The Uganda"
+ ISR_fascism:0 "Uganda"
+ ISR_liberalism_ADJ:0 "Ugandan"
+ ISR_liberalism_DEF:0 "The Uganda"
+ ISR_liberalism:0 "Uganda"
+ ISR_nazism_ADJ:0 "Ugandan"
+ ISR_nazism_DEF:0 "The Uganda"
+ ISR_nazism:0 "Uganda"
+ ISR_social_democracy_ADJ:0 "Ugandan"
+ ISR_social_democracy_DEF:0 "The Uganda"
+ ISR_social_democracy:0 "Uganda"
+ ISR_socialism_ADJ:0 "Ugandan"
+ ISR_socialism_DEF:0 "The People's Republic of Uganda"
+ ISR_socialism:0 "People's Republic of Uganda"
  ITA_authoritarianism_ADJ:0 "Italian"
  ITA_authoritarianism_DEF:0 "The Italian Republic"
  ITA_authoritarianism:0 "Italian Republic"
@@ -2351,3 +2351,27 @@
  SGR_socialism_ADJ:0 "German"
  SGR_socialism_DEF:0 "The Bavarian Soviet Republic"
  SGR_socialism:0 "Bavarian Soviet Republic"
+ BOT_authoritarianism_ADJ:0 "Botswanan"
+ BOT_authoritarianism_DEF:0 "The Botswana"
+ BOT_authoritarianism:0 "Botswana"
+ BOT_communism_ADJ:0 "Botswanan"
+ BOT_communism_DEF:0 "The People's Republic of Botswana"
+ BOT_communism:0 "People's Republic of Botswana"
+ BOT_conservatism_ADJ:0 "Botswanan"
+ BOT_conservatism_DEF:0 "The Botswana"
+ BOT_conservatism:0 "Botswana"
+ BOT_fascism_ADJ:0 "Botswanan"
+ BOT_fascism_DEF:0 "The Botswana"
+ BOT_fascism:0 "Botswana"
+ BOT_liberalism_ADJ:0 "Botswanan"
+ BOT_liberalism_DEF:0 "The Botswana"
+ BOT_liberalism:0 "Botswana"
+ BOT_nazism_ADJ:0 "Botswanan"
+ BOT_nazism_DEF:0 "The Botswana"
+ BOT_nazism:0 "Botswana"
+ BOT_social_democracy_ADJ:0 "Botswanan"
+ BOT_social_democracy_DEF:0 "The Botswana"
+ BOT_social_democracy:0 "Botswana"
+ BOT_socialism_ADJ:0 "Botswanan"
+ BOT_socialism_DEF:0 "The People's Republic of Botswana"
+ BOT_socialism:0 "People's Republic of Botswana"
