--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -446,7 +446,7 @@
  VICTORY_POINTS_12942:0 "Córdoba"
  VICTORY_POINTS_650:0 "Santiago"
  VICTORY_POINTS_10400:0 "Pretoria"
- VICTORY_POINTS_1468:0 "Durban"
+ VICTORY_POINTS_1468:0 "Pietermaritzburg"
  VICTORY_POINTS_4696:0 "Port Elizabeth"
  VICTORY_POINTS_12589:0 "Cape Town"
  VICTORY_POINTS_8245:0 "Lourenco Marques"
@@ -578,7 +578,7 @@
  VICTORY_POINTS_10470:0 "Bukhara"
  VICTORY_POINTS_7199:0 "Ruijin"
  VICTORY_POINTS_5037:0 "Mecca"
- VICTORY_POINTS_12989:0 "New Jerusalem"
+ VICTORY_POINTS_12989:0 "Kampala"
  VICTORY_POINTS_4379:0 "Huê"
  VICTORY_POINTS_11523:0 "Engels"
  VICTORY_POINTS_12333:0 "Ashgabat"
@@ -591,3 +591,6 @@
  VICTORY_POINTS_10405:0 "Florianópolis"
  VICTORY_POINTS_8148:0 "Belo Horizonte"
  VICTORY_POINTS_5208:0 "Goiânia"
+ VICTORY_POINTS_10908:0 "Juba"
+ VICTORY_POINTS_8214:0 "Gaborone"
+ VICTORY_POINTS_12505:0 "St. John's"
