--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -729,14 +729,14 @@
  FIN_conservatism_DEF:0 "The Finland"
  FIN_conservatism:0 "Finland"
  FIN_fascism_ADJ:0 "Finnish"
- FIN_fascism_DEF:0 "The Finland"
- FIN_fascism:0 "Finland"
+ FIN_fascism_DEF:0 "The Greater Finland"
+ FIN_fascism:0 "Greater Finland"
  FIN_liberalism_ADJ:0 "Finnish"
  FIN_liberalism_DEF:0 "The Finland"
  FIN_liberalism:0 "Finland"
  FIN_nazism_ADJ:0 "Finnish"
- FIN_nazism_DEF:0 "The Finland"
- FIN_nazism:0 "Finland"
+ FIN_nazism_DEF:0 "The Greater Finland"
+ FIN_nazism:0 "Greater Finland"
  FIN_social_democracy_ADJ:0 "Finnish"
  FIN_social_democracy_DEF:0 "The Finland"
  FIN_social_democracy:0 "Finland"
