--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -2,40 +2,40 @@
  communism:0 "Marxism-Leninism"
  communism_noun:0 "Communist"
  communist_desc:0 "A Marxist-Leninist regime"
- communism_desc:0 "Marxism-Leninist"
+ communism_desc:0 "Totalitarian"
  socialism:0 "Revolutionary Socialism"
  socialism_noun:0 "Socialist"
  socialist_desc:0 "A revolutionary socialist regime"
- socialism_desc:0 "Revolutionary Socialist"
+ socialism_desc:0 "Socialist"
  social_democracy:0 "Social Democracy"
  social_democracy_noun:0 "Social Democrat"
  social_democrat_desc:0 "A social democrat regime"
- social_democracy_desc:0 "Social Democratic"
+ social_democracy_desc:0 "Democratic"
  liberalism:0 "Market Liberalism"
  liberalism_noun:0 "Liberal"
  liberal_desc:0 "A market liberal regime"
- liberalism_desc:0 "Market Liberal"
+ liberalism_desc:0 "Democratic"
  conservatism:0 "Liberal Conservatism"
  conservatism_noun:0 "Conservative"
  conservative_desc:0 "A liberal conservative regime"
- conservatism_desc:0 "Liberal Conservative"
+ conservatism_desc:0 "Democratic"
  authoritarianism:0 "Authoritarianism"
  authoritarianism_noun:0 "Authoritarian"
  authoritarian_desc:0 "An authoritarian regime"
- authoritarianism_desc:0 "Authoritarian"
+ authoritarianism_desc:0 "Autocratic"
  fascism:0 "Corporatist Fascism"
  fascism_noun:0 "Fascist"
  fascist_desc:0 "A corporatist fascist regime"
- fascism_desc:0 "Corporatist Fascist"
+ fascism_desc:0 "Autocratic"
  nationalism:0 "Radical Nationalism"
  nationalism_noun:0 "Nationalist"
  nationalist_desc:0 "A radical nationalist regime"
- nationalism_desc:0 "Radical Nationalist"
+ nationalism_desc:0 "Autocratic"
  anarchism:0 "Libertarian Anarchism"
  anarchism_noun:0 "Anarchist"
  anarchist_desc:0 "A libertarian anarchist regime"
- anarchism_desc:0 "Libertarian Anarchist"
+ anarchism_desc:0 "Anarchist"
  christian_democracy:0 "Christian Democracy"
  christian_democracy_noun:0 "Christian Democrat"
  christian_democrat_desc:0 "A christian democrat regime"
- christian_democracy_desc:0 "Christian Democratic"
+ christian_democracy_desc:0 "Democratic"
