--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -594,3 +594,6 @@
  VICTORY_POINTS_10908:0 "Juba"
  VICTORY_POINTS_8214:0 "Gaborone"
  VICTORY_POINTS_12505:0 "St. John's"
+ VICTORY_POINTS_5022:0 "Austin"
+ VICTORY_POINTS_10848:0 "Hermosillo"
+ VICTORY_POINTS_12736:0 "La Paz"
