--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,31 +1,34 @@
 ﻿l_english:
+ AFN_fra_social_democracy_ADJ:0 "French African"
+ AFN_fra_social_democracy_DEF:0 "The French Africa"
+ AFN_fra_social_democracy:0 "French Africa"
  ANG_por_authoritarianism_ADJ:0 "Angolan"
  ANG_por_authoritarianism_DEF:0 "The Province of Angola"
  ANG_por_authoritarianism:0 "Province of Angola"
+ AST_syn_syndicalism_ADJ:0 "Australasian"
+ AST_syn_syndicalism_DEF:0 "The Union of Australasia"
+ AST_syn_syndicalism:0 "Union of Australasia"
+ AUS_gre_ultranationalism_ADJ:0 "Austrian"
+ AUS_gre_ultranationalism_DEF:0 "The Greater Austria"
+ AUS_gre_ultranationalism:0 "Greater Austria"
+ BAH_con_conservatism_ADJ:0 "Brazilian"
+ BAH_con_conservatism_DEF:0 "The Confederation of the Equator"
+ BAH_con_conservatism:0 "Confederation of the Equator"
  BLA_com_communism_ADJ:0 "Don-Kuban"
  BLA_com_communism_DEF:0 "The Black Sea ASSR"
  BLA_com_communism:0 "Black Sea ASSR"
  BLR_com_communism_ADJ:0 "Byelorussian"
  BLR_com_communism_DEF:0 "The Byelorussian SSR"
  BLR_com_communism:0 "Byelorussian SSR"
- BOL_san_liberalism_ADJ:0 "Bolivian"
- BOL_san_liberalism_DEF:0 "The Santa Cruz"
- BOL_san_liberalism:0 "Santa Cruz"
- BWA_bri_syndicalism_ADJ:0 "West African"
- BWA_bri_syndicalism_DEF:0 "The West African Union"
- BWA_bri_syndicalism:0 "West African Union"
- CAN_bri_conservatism_ADJ:0 "Canadian"
- CAN_bri_conservatism_DEF:0 "The Canadian Confederation"
- CAN_bri_conservatism:0 "Canadian Confederation"
- CAN_bri_liberalism_ADJ:0 "Canadian"
- CAN_bri_liberalism_DEF:0 "The Canadian Confederation"
- CAN_bri_liberalism:0 "Canadian Confederation"
- CAN_bri_social_democracy_ADJ:0 "Canadian"
- CAN_bri_social_democracy_DEF:0 "The Canadian Confederation"
- CAN_bri_social_democracy:0 "Canadian Confederation"
- COG_bel_conservatism_ADJ:0 "Congolese"
- COG_bel_conservatism_DEF:0 "The Belgian Congo"
- COG_bel_conservatism:0 "Belgian Congo"
+ BRA_aut_authoritarianism_ADJ:0 "Brazilian"
+ BRA_aut_authoritarianism_DEF:0 "The Empire of Brazil"
+ BRA_aut_authoritarianism:0 "Empire of Brazil"
+ CAN_syn_syndicalism_ADJ:0 "Canadian"
+ CAN_syn_syndicalism_DEF:0 "The Union of Canada"
+ CAN_syn_syndicalism:0 "Union of Canada"
+ COG_bel_authoritarianism_ADJ:0 "Congolese"
+ COG_bel_authoritarianism_DEF:0 "The Belgian Congo"
+ COG_bel_authoritarianism:0 "Belgian Congo"
  CRO_cro_fascism_ADJ:0 "Croatian"
  CRO_cro_fascism_DEF:0 "The Greater Croatia"
  CRO_cro_fascism:0 "Greater Croatia"
@@ -35,63 +38,96 @@
  DDR_com_communism_ADJ:0 "Volga German"
  DDR_com_communism_DEF:0 "The Volga German ASSR"
  DDR_com_communism:0 "Volga German ASSR"
- EST_soc_syndicalism_ADJ:0 "Estonian"
- EST_soc_syndicalism_DEF:0 "The ETK"
- EST_soc_syndicalism:0 "ETK"
- ETH_ita_fascism_ADJ:0 "Italian"
- ETH_ita_fascism_DEF:0 "The Italian Empire"
- ETH_ita_fascism:0 "Italian Empire"
+ EST_com_communism_ADJ:0 "Estonian"
+ EST_com_communism_DEF:0 "The Estonian SSR"
+ EST_com_communism:0 "Estonian SSR"
+ FCG_com_communism_ADJ:0 "Congolese"
+ FCG_com_communism_DEF:0 "The People's Republic of the Congo"
+ FCG_com_communism:0 "People's Republic of the Congo"
+ FIN_com_communism_ADJ:0 "Finnish"
+ FIN_com_communism_DEF:0 "The Finnish SSR"
+ FIN_com_communism:0 "Finnish SSR"
  GEO_com_communism_ADJ:0 "Transcaucasian"
  GEO_com_communism_DEF:0 "The Transcaucasian SFSR"
  GEO_com_communism:0 "Transcaucasian SFSR"
  GER_com_communism_ADJ:0 "German"
- GER_com_communism_DEF:0 "The German Soviet Republic"
- GER_com_communism:0 "German Soviet Republic"
- INS_hol_conservatism_ADJ:0 "Dutch-Indonesian"
- INS_hol_conservatism_DEF:0 "The Dutch East Indies"
- INS_hol_conservatism:0 "Dutch East Indies"
+ GER_com_communism_DEF:0 "The German SFSR"
+ GER_com_communism:0 "German SFSR"
+ ISR_jud_conservatism_ADJ:0 "Judean"
+ ISR_jud_conservatism_DEF:0 "The New Judea"
+ ISR_jud_conservatism:0 "New Judea"
+ ITA_ana_anarchism_ADJ:0 "Italian"
+ ITA_ana_anarchism_DEF:0 "The Italian Anarchist Federation"
+ ITA_ana_anarchism:0 "Italian Anarchist Federation"
  KAZ_com_communism_ADJ:0 "Transcaspian"
  KAZ_com_communism_DEF:0 "The Transcaspian SFSR"
  KAZ_com_communism:0 "Transcaspian SFSR"
- KEN_bri_conservatism_ADJ:0 "Tanganyikan"
- KEN_bri_conservatism_DEF:0 "The Tanganyika"
- KEN_bri_conservatism:0 "Tanganyika"
+ KEN_bri_authoritarianism_ADJ:0 "East African"
+ KEN_bri_authoritarianism_DEF:0 "The British East Africa"
+ KEN_bri_authoritarianism:0 "British East Africa"
  KOR_jap_authoritarianism_ADJ:0 "Korean"
  KOR_jap_authoritarianism_DEF:0 "The Japanese Korea"
  KOR_jap_authoritarianism:0 "Japanese Korea"
  LAT_com_communism_ADJ:0 "Latvian"
  LAT_com_communism_DEF:0 "The Latvian SSR"
  LAT_com_communism:0 "Latvian SSR"
- LBA_soc_syndicalism_ADJ:0 "Libyan"
- LBA_soc_syndicalism_DEF:0 "The Italian North Africa"
- LBA_soc_syndicalism:0 "Italian North Africa"
- LIT_com_communism_ADJ:0 "Lithuanian"
- LIT_com_communism_DEF:0 "The Lithuanian SSR"
- LIT_com_communism:0 "Lithuanian SSR"
- MAL_bri_conservatism_ADJ:0 "Malaysian"
- MAL_bri_conservatism_DEF:0 "The British Malaya"
- MAL_bri_conservatism:0 "British Malaya"
+ LIT_com_communism_ADJ:0 "Lithuanian-Byelorussian"
+ LIT_com_communism_DEF:0 "The Litbel SSR"
+ LIT_com_communism:0 "Litbel SSR"
+ MAL_bri_authoritarianism_ADJ:0 "Malaysian"
+ MAL_bri_authoritarianism_DEF:0 "The British Malaya"
+ MAL_bri_authoritarianism:0 "British Malaya"
+ MEX_ana_anarchism_ADJ:0 "Mexican"
+ MEX_ana_anarchism_DEF:0 "The Mexican Anarchist Federation"
+ MEX_ana_anarchism:0 "Mexican Anarchist Federation"
  MON_com_communism_ADJ:0 "Buryat-Mongolian"
  MON_com_communism_DEF:0 "The Buryat-Mongol ASSR"
  MON_com_communism:0 "Buryat-Mongol ASSR"
  MZB_por_authoritarianism_ADJ:0 "Mozambican"
  MZB_por_authoritarianism_DEF:0 "The Portuguese East Africa"
  MZB_por_authoritarianism:0 "Portuguese East Africa"
+ NAT_bri_authoritarianism_ADJ:0 "South African"
+ NAT_bri_authoritarianism_DEF:0 "The Natal"
+ NAT_bri_authoritarianism:0 "Natal"
+ NEW_bri_authoritarianism_ADJ:0 "Newfoundlander"
+ NEW_bri_authoritarianism_DEF:0 "The Newfoundland"
+ NEW_bri_authoritarianism:0 "Newfoundland"
+ NIG_bri_authoritarianism_ADJ:0 "West African"
+ NIG_bri_authoritarianism_DEF:0 "The British West Africa"
+ NIG_bri_authoritarianism:0 "British West Africa"
+ PAT_ana_anarchism_ADJ:0 "Patagonian"
+ PAT_ana_anarchism_DEF:0 "The Patagonian Workers' Federation"
+ PAT_ana_anarchism:0 "Patagonian Workers' Federation"
+ PHI_ult_ultranationalism_ADJ:0 "Filipino"
+ PHI_ult_ultranationalism_DEF:0 "The Commonwealth of the Philippines"
+ PHI_ult_ultranationalism:0 "Commonwealth of the Philippines"
  PRU_bol_social_democracy_ADJ:0 "Peruvian-Bolivian"
  PRU_bol_social_democracy_DEF:0 "The Peru-Bolivian Confederation"
  PRU_bol_social_democracy:0 "Peru-Bolivian Confederation"
- RAJ_bri_conservatism_ADJ:0 "British"
- RAJ_bri_conservatism_DEF:0 "The British Empire"
- RAJ_bri_conservatism:0 "British Empire"
+ QUE_ult_syndicalism_ADJ:0 "Canadian"
+ QUE_ult_syndicalism_DEF:0 "The Commonwealth of Canada"
+ QUE_ult_syndicalism:0 "Commonwealth of Canada"
+ RAJ_bri_authoritarianism_ADJ:0 "British"
+ RAJ_bri_authoritarianism_DEF:0 "The British Empire"
+ RAJ_bri_authoritarianism:0 "British Empire"
+ SAF_syn_syndicalism_ADJ:0 "South African"
+ SAF_syn_syndicalism_DEF:0 "The Union of South Africa"
+ SAF_syn_syndicalism:0 "Union of South Africa"
+ SAO_syn_syndicalism_ADJ:0 "Brazilian"
+ SAO_syn_syndicalism_DEF:0 "The Piratini Union"
+ SAO_syn_syndicalism:0 "Piratini Union"
  SOV_com_communism_ADJ:0 "Russian"
  SOV_com_communism_DEF:0 "The Russian SFSR"
  SOV_com_communism:0 "Russian SFSR"
+ TGN_bri_authoritarianism_ADJ:0 "Tanganyikan"
+ TGN_bri_authoritarianism_DEF:0 "The Tanganyika"
+ TGN_bri_authoritarianism:0 "Tanganyika"
  UKR_com_communism_ADJ:0 "Ukrainian"
  UKR_com_communism_DEF:0 "The Ukrainian SSR"
  UKR_com_communism:0 "Ukrainian SSR"
+ UOA_syn_syndicalism_ADJ:0 "American"
+ UOA_syn_syndicalism_DEF:0 "The Union of America"
+ UOA_syn_syndicalism:0 "Union of America"
  VIN_fra_social_democracy_ADJ:0 "Indochinese"
  VIN_fra_social_democracy_DEF:0 "The Indochinese Federation"
  VIN_fra_social_democracy:0 "Indochinese Federation"
- ZIM_bri_conservatism_ADJ:0 "Central African"
- ZIM_bri_conservatism_DEF:0 "The Central African Federation"
- ZIM_bri_conservatism:0 "Central African Federation"
