--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -129,35 +129,35 @@
  ###################################################
  ###################################################
  ARG_anarchism_ADJ:0 "Argentine"
- ARG_anarchism_DEF:0 "The Argentina"
- ARG_anarchism:0 "Argentina"
+ ARG_anarchism_DEF:0 "The Buenos Aires"
+ ARG_anarchism:0 "Buenos Aires"
  ARG_authoritarianism_ADJ:0 "Argentine"
- ARG_authoritarianism_DEF:0 "The Argentina"
- ARG_authoritarianism:0 "Argentina"
+ ARG_authoritarianism_DEF:0 "The Buenos Aires"
+ ARG_authoritarianism:0 "Buenos Aires"
  ARG_christian_democracy_ADJ:0 "Argentine"
- ARG_christian_democracy_DEF:0 "The Argentina"
- ARG_christian_democracy:0 "Argentina"
+ ARG_christian_democracy_DEF:0 "The Buenos Aires"
+ ARG_christian_democracy:0 "Buenos Aires"
  ARG_communism_ADJ:0 "Argentine"
- ARG_communism_DEF:0 "The Argentina"
- ARG_communism:0 "Argentina"
+ ARG_communism_DEF:0 "The Buenos Aires"
+ ARG_communism:0 "Buenos Aires"
  ARG_conservatism_ADJ:0 "Argentine"
- ARG_conservatism_DEF:0 "The Argentina"
- ARG_conservatism:0 "Argentina"
+ ARG_conservatism_DEF:0 "The Buenos Aires"
+ ARG_conservatism:0 "Buenos Aires"
  ARG_fascism_ADJ:0 "Argentine"
- ARG_fascism_DEF:0 "The Argentina"
- ARG_fascism:0 "Argentina"
+ ARG_fascism_DEF:0 "The Buenos Aires"
+ ARG_fascism:0 "Buenos Aires"
  ARG_liberalism_ADJ:0 "Argentine"
- ARG_liberalism_DEF:0 "The Argentina"
- ARG_liberalism:0 "Argentina"
+ ARG_liberalism_DEF:0 "The Buenos Aires"
+ ARG_liberalism:0 "Buenos Aires"
  ARG_social_democracy_ADJ:0 "Argentine"
- ARG_social_democracy_DEF:0 "The Argentina"
- ARG_social_democracy:0 "Argentina"
+ ARG_social_democracy_DEF:0 "The Buenos Aires"
+ ARG_social_democracy:0 "Buenos Aires"
  ARG_syndicalism_ADJ:0 "Argentine"
- ARG_syndicalism_DEF:0 "The Argentina"
- ARG_syndicalism:0 "Argentina"
+ ARG_syndicalism_DEF:0 "The Buenos Aires"
+ ARG_syndicalism:0 "Buenos Aires"
  ARG_ultranationalism_ADJ:0 "Argentine"
- ARG_ultranationalism_DEF:0 "The Argentina"
- ARG_ultranationalism:0 "Argentina"
+ ARG_ultranationalism_DEF:0 "The Buenos Aires"
+ ARG_ultranationalism:0 "Buenos Aires"
  ###################################################
  ###################################################
  AST_anarchism_ADJ:0 "Australasian"
@@ -705,35 +705,35 @@
  ###################################################
  ###################################################
  CUB_anarchism_ADJ:0 "Central American"
- CUB_anarchism_DEF:0 "The Central America"
- CUB_anarchism:0 "Central America"
+ CUB_anarchism_DEF:0 "The Federation of Central America"
+ CUB_anarchism:0 "Federation of Central America"
  CUB_authoritarianism_ADJ:0 "Central American"
- CUB_authoritarianism_DEF:0 "The Central America"
- CUB_authoritarianism:0 "Central America"
+ CUB_authoritarianism_DEF:0 "The Federation of Central America"
+ CUB_authoritarianism:0 "Federation of Central America"
  CUB_christian_democracy_ADJ:0 "Central American"
- CUB_christian_democracy_DEF:0 "The Central America"
- CUB_christian_democracy:0 "Central America"
+ CUB_christian_democracy_DEF:0 "The Federation of Central America"
+ CUB_christian_democracy:0 "Federation of Central America"
  CUB_communism_ADJ:0 "Central American"
- CUB_communism_DEF:0 "The Central America"
- CUB_communism:0 "Central America"
+ CUB_communism_DEF:0 "The Federation of Central America"
+ CUB_communism:0 "Federation of Central America"
  CUB_conservatism_ADJ:0 "Central American"
- CUB_conservatism_DEF:0 "The Central America"
- CUB_conservatism:0 "Central America"
+ CUB_conservatism_DEF:0 "The Federation of Central America"
+ CUB_conservatism:0 "Federation of Central America"
  CUB_fascism_ADJ:0 "Central American"
- CUB_fascism_DEF:0 "The Central America"
- CUB_fascism:0 "Central America"
+ CUB_fascism_DEF:0 "The Federation of Central America"
+ CUB_fascism:0 "Federation of Central America"
  CUB_liberalism_ADJ:0 "Central American"
- CUB_liberalism_DEF:0 "The Central America"
- CUB_liberalism:0 "Central America"
+ CUB_liberalism_DEF:0 "The Federation of Central America"
+ CUB_liberalism:0 "Federation of Central America"
  CUB_social_democracy_ADJ:0 "Central American"
- CUB_social_democracy_DEF:0 "The Central America"
- CUB_social_democracy:0 "Central America"
+ CUB_social_democracy_DEF:0 "The Federation of Central America"
+ CUB_social_democracy:0 "Federation of Central America"
  CUB_syndicalism_ADJ:0 "Central American"
- CUB_syndicalism_DEF:0 "The Central America"
- CUB_syndicalism:0 "Central America"
+ CUB_syndicalism_DEF:0 "The Federation of Central America"
+ CUB_syndicalism:0 "Federation of Central America"
  CUB_ultranationalism_ADJ:0 "Central American"
- CUB_ultranationalism_DEF:0 "The Central America"
- CUB_ultranationalism:0 "Central America"
+ CUB_ultranationalism_DEF:0 "The Federation of Central America"
+ CUB_ultranationalism:0 "Federation of Central America"
  ###################################################
  ###################################################
  CZE_anarchism_ADJ:0 "West Slavic"
@@ -928,34 +928,34 @@
  EGY_ultranationalism:0 "Egypt"
  ###################################################
  ###################################################
- ENG_anarchism_ADJ:0 "Britain"
- ENG_anarchism_DEF:0 "The Great Britain"
- ENG_anarchism:0 "Great Britain"
- ENG_authoritarianism_ADJ:0 "Britain"
+ ENG_anarchism_ADJ:0 "British"
+ ENG_anarchism_DEF:0 "The Union of Britain"
+ ENG_anarchism:0 "Union of Britain"
+ ENG_authoritarianism_ADJ:0 "British"
  ENG_authoritarianism_DEF:0 "The Great Britain"
  ENG_authoritarianism:0 "Great Britain"
- ENG_christian_democracy_ADJ:0 "Britain"
+ ENG_christian_democracy_ADJ:0 "British"
  ENG_christian_democracy_DEF:0 "The Great Britain"
  ENG_christian_democracy:0 "Great Britain"
- ENG_communism_ADJ:0 "Britain"
+ ENG_communism_ADJ:0 "British"
  ENG_communism_DEF:0 "The Great Britain"
  ENG_communism:0 "Great Britain"
- ENG_conservatism_ADJ:0 "Britain"
+ ENG_conservatism_ADJ:0 "British"
  ENG_conservatism_DEF:0 "The Great Britain"
  ENG_conservatism:0 "Great Britain"
- ENG_fascism_ADJ:0 "Britain"
+ ENG_fascism_ADJ:0 "British"
  ENG_fascism_DEF:0 "The Great Britain"
  ENG_fascism:0 "Great Britain"
- ENG_liberalism_ADJ:0 "Britain"
+ ENG_liberalism_ADJ:0 "British"
  ENG_liberalism_DEF:0 "The Great Britain"
  ENG_liberalism:0 "Great Britain"
- ENG_social_democracy_ADJ:0 "Britain"
+ ENG_social_democracy_ADJ:0 "British"
  ENG_social_democracy_DEF:0 "The Great Britain"
  ENG_social_democracy:0 "Great Britain"
- ENG_syndicalism_ADJ:0 "Britain"
- ENG_syndicalism_DEF:0 "The Great Britain"
- ENG_syndicalism:0 "Great Britain"
- ENG_ultranationalism_ADJ:0 "Britain"
+ ENG_syndicalism_ADJ:0 "British"
+ ENG_syndicalism_DEF:0 "The Union of Britain"
+ ENG_syndicalism:0 "Union of Britain"
+ ENG_ultranationalism_ADJ:0 "British"
  ENG_ultranationalism_DEF:0 "The Great Britain"
  ENG_ultranationalism:0 "Great Britain"
  ###################################################
@@ -996,8 +996,8 @@
  ETH_anarchism_DEF:0 "The Ethiopia"
  ETH_anarchism:0 "Ethiopia"
  ETH_authoritarianism_ADJ:0 "Ethiopian"
- ETH_authoritarianism_DEF:0 "The Ethiopia"
- ETH_authoritarianism:0 "Ethiopia"
+ ETH_authoritarianism_DEF:0 "The Ethiopian Empire"
+ ETH_authoritarianism:0 "Ethiopian Empire"
  ETH_christian_democracy_ADJ:0 "Ethiopian"
  ETH_christian_democracy_DEF:0 "The Ethiopia"
  ETH_christian_democracy:0 "Ethiopia"
@@ -1572,8 +1572,8 @@
  JAP_anarchism_DEF:0 "The Japan"
  JAP_anarchism:0 "Japan"
  JAP_authoritarianism_ADJ:0 "Japanese"
- JAP_authoritarianism_DEF:0 "The Japan"
- JAP_authoritarianism:0 "Japan"
+ JAP_authoritarianism_DEF:0 "The Empire of Japan"
+ JAP_authoritarianism:0 "Empire of Japan"
  JAP_christian_democracy_ADJ:0 "Japanese"
  JAP_christian_democracy_DEF:0 "The Japan"
  JAP_christian_democracy:0 "Japan"
@@ -1857,35 +1857,35 @@
  ###################################################
  ###################################################
  MAN_anarchism_ADJ:0 "Manchurian"
- MAN_anarchism_DEF:0 "The Manchuria"
- MAN_anarchism:0 "Manchuria"
+ MAN_anarchism_DEF:0 "The Manchukuo"
+ MAN_anarchism:0 "Manchukuo"
  MAN_authoritarianism_ADJ:0 "Manchurian"
- MAN_authoritarianism_DEF:0 "The Manchuria"
- MAN_authoritarianism:0 "Manchuria"
+ MAN_authoritarianism_DEF:0 "The Manchukuo"
+ MAN_authoritarianism:0 "Manchukuo"
  MAN_christian_democracy_ADJ:0 "Manchurian"
- MAN_christian_democracy_DEF:0 "The Manchuria"
- MAN_christian_democracy:0 "Manchuria"
+ MAN_christian_democracy_DEF:0 "The Manchukuo"
+ MAN_christian_democracy:0 "Manchukuo"
  MAN_communism_ADJ:0 "Manchurian"
- MAN_communism_DEF:0 "The Manchuria"
- MAN_communism:0 "Manchuria"
+ MAN_communism_DEF:0 "The Manchukuo"
+ MAN_communism:0 "Manchukuo"
  MAN_conservatism_ADJ:0 "Manchurian"
- MAN_conservatism_DEF:0 "The Manchuria"
- MAN_conservatism:0 "Manchuria"
+ MAN_conservatism_DEF:0 "The Manchukuo"
+ MAN_conservatism:0 "Manchukuo"
  MAN_fascism_ADJ:0 "Manchurian"
- MAN_fascism_DEF:0 "The Manchuria"
- MAN_fascism:0 "Manchuria"
+ MAN_fascism_DEF:0 "The Manchukuo"
+ MAN_fascism:0 "Manchukuo"
  MAN_liberalism_ADJ:0 "Manchurian"
- MAN_liberalism_DEF:0 "The Manchuria"
- MAN_liberalism:0 "Manchuria"
+ MAN_liberalism_DEF:0 "The Manchukuo"
+ MAN_liberalism:0 "Manchukuo"
  MAN_social_democracy_ADJ:0 "Manchurian"
- MAN_social_democracy_DEF:0 "The Manchuria"
- MAN_social_democracy:0 "Manchuria"
+ MAN_social_democracy_DEF:0 "The Manchukuo"
+ MAN_social_democracy:0 "Manchukuo"
  MAN_syndicalism_ADJ:0 "Manchurian"
- MAN_syndicalism_DEF:0 "The Manchuria"
- MAN_syndicalism:0 "Manchuria"
+ MAN_syndicalism_DEF:0 "The Manchukuo"
+ MAN_syndicalism:0 "Manchukuo"
  MAN_ultranationalism_ADJ:0 "Manchurian"
- MAN_ultranationalism_DEF:0 "The Manchuria"
- MAN_ultranationalism:0 "Manchuria"
+ MAN_ultranationalism_DEF:0 "The Manchukuo"
+ MAN_ultranationalism:0 "Manchukuo"
  ###################################################
  ###################################################
  MEN_anarchism_ADJ:0 "Mongolian"
@@ -2238,6 +2238,38 @@
  PAR_ultranationalism_ADJ:0 "Paraguayan"
  PAR_ultranationalism_DEF:0 "The Paraguay"
  PAR_ultranationalism:0 "Paraguay"
+ ###################################################
+ ###################################################
+ PAT_anarchism_ADJ:0 "Patagonian"
+ PAT_anarchism_DEF:0 "The Patagonia"
+ PAT_anarchism:0 "Patagonia"
+ PAT_authoritarianism_ADJ:0 "Patagonian"
+ PAT_authoritarianism_DEF:0 "The Patagonia"
+ PAT_authoritarianism:0 "Patagonia"
+ PAT_christian_democracy_ADJ:0 "Patagonian"
+ PAT_christian_democracy_DEF:0 "The Patagonia"
+ PAT_christian_democracy:0 "Patagonia"
+ PAT_communism_ADJ:0 "Patagonian"
+ PAT_communism_DEF:0 "The Patagonia"
+ PAT_communism:0 "Patagonia"
+ PAT_conservatism_ADJ:0 "Patagonian"
+ PAT_conservatism_DEF:0 "The Patagonia"
+ PAT_conservatism:0 "Patagonia"
+ PAT_fascism_ADJ:0 "Patagonian"
+ PAT_fascism_DEF:0 "The Patagonia"
+ PAT_fascism:0 "Patagonia"
+ PAT_liberalism_ADJ:0 "Patagonian"
+ PAT_liberalism_DEF:0 "The Patagonia"
+ PAT_liberalism:0 "Patagonia"
+ PAT_social_democracy_ADJ:0 "Patagonian"
+ PAT_social_democracy_DEF:0 "The Patagonia"
+ PAT_social_democracy:0 "Patagonia"
+ PAT_syndicalism_ADJ:0 "Patagonian"
+ PAT_syndicalism_DEF:0 "The Patagonia"
+ PAT_syndicalism:0 "Patagonia"
+ PAT_ultranationalism_ADJ:0 "Patagonian"
+ PAT_ultranationalism_DEF:0 "The Patagonia"
+ PAT_ultranationalism:0 "Patagonia"
  ###################################################
  ###################################################
  PER_anarchism_ADJ:0 "Iranian"
@@ -3184,8 +3216,8 @@
  USA_conservatism_DEF:0 "The USA"
  USA_conservatism:0 "USA"
  USA_fascism_ADJ:0 "American"
- USA_fascism_DEF:0 "The USA"
- USA_fascism:0 "USA"
+ USA_fascism_DEF:0 "The Commonwealth of America"
+ USA_fascism:0 "Commonwealth of America"
  USA_liberalism_ADJ:0 "American"
  USA_liberalism_DEF:0 "The USA"
  USA_liberalism:0 "USA"
@@ -3196,8 +3228,8 @@
  USA_syndicalism_DEF:0 "The USA"
  USA_syndicalism:0 "USA"
  USA_ultranationalism_ADJ:0 "American"
- USA_ultranationalism_DEF:0 "The USA"
- USA_ultranationalism:0 "USA"
+ USA_ultranationalism_DEF:0 "The Commonwealth of America"
+ USA_ultranationalism:0 "Commonwealth of America"
  ###################################################
  ###################################################
  VEN_anarchism_ADJ:0 "Venezuelan"
