--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -17,9 +17,6 @@
  BLA_com_communism_ADJ:0 "Don-Kuban"
  BLA_com_communism_DEF:0 "The Black Sea ASSR"
  BLA_com_communism:0 "Black Sea ASSR"
- BLR_com_communism_ADJ:0 "Byelorussian"
- BLR_com_communism_DEF:0 "The Byelorussian SSR"
- BLR_com_communism:0 "Byelorussian SSR"
  BRA_aut_authoritarianism_ADJ:0 "Brazilian"
  BRA_aut_authoritarianism_DEF:0 "The Empire of Brazil"
  BRA_aut_authoritarianism:0 "Empire of Brazil"
@@ -98,15 +95,12 @@
  PAT_ana_anarchism_ADJ:0 "Patagonian"
  PAT_ana_anarchism_DEF:0 "The Patagonian Workers' Federation"
  PAT_ana_anarchism:0 "Patagonian Workers' Federation"
- PHI_ult_ultranationalism_ADJ:0 "Filipino"
- PHI_ult_ultranationalism_DEF:0 "The Commonwealth of the Philippines"
- PHI_ult_ultranationalism:0 "Commonwealth of the Philippines"
  PRU_bol_social_democracy_ADJ:0 "Peruvian-Bolivian"
  PRU_bol_social_democracy_DEF:0 "The Peru-Bolivian Confederation"
  PRU_bol_social_democracy:0 "Peru-Bolivian Confederation"
- QUE_ult_syndicalism_ADJ:0 "Canadian"
- QUE_ult_syndicalism_DEF:0 "The Commonwealth of Canada"
- QUE_ult_syndicalism:0 "Commonwealth of Canada"
+ QUE_ult_ultranationalism_ADJ:0 "Canadian"
+ QUE_ult_ultranationalism_DEF:0 "The Commonwealth of Canada"
+ QUE_ult_ultranationalism:0 "Commonwealth of Canada"
  RAJ_bri_authoritarianism_ADJ:0 "British"
  RAJ_bri_authoritarianism_DEF:0 "The British Empire"
  RAJ_bri_authoritarianism:0 "British Empire"
