--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -2332,8 +2332,8 @@
  PHI_syndicalism_DEF:0 "The Philippines"
  PHI_syndicalism:0 "Philippines"
  PHI_ultranationalism_ADJ:0 "Filipino"
- PHI_ultranationalism_DEF:0 "The Philippines"
- PHI_ultranationalism:0 "Philippines"
+ PHI_ultranationalism_DEF:0 "The Commonwealth of the Philippines"
+ PHI_ultranationalism:0 "Commonwealth of the Philippines"
  ###################################################
  ###################################################
  POR_anarchism_ADJ:0 "Portuguese"
